@@ -2,6 +2,7 @@
 	* work in progress to adapt to SUSYTools-00-05-23
 	* BuildSUSYObjects: set the Is8TeV SUSYObjDef property
 	* PhysObjProxies, PhysObjProxyUtils, PhysObjProxyFiller, BuildSUSYObjects: change decorations from bool to char
+	* PileUpRWProcessor, BuildSUSYObjects, ZeroLeptonDataDrivenQCD, ZeroLeptonSystVariations: change record<blah>(blah*) to record(blah*)
 
 
 31-Mar-2015 Laurent Duflot
